# math-func

./: .gitignore  CMakeLists.txt  README.md  main.cpp  randomLines.cpp
scr/: math_vector.h  object.cpp  object.h  window.h  window.hpp
