cmake_minimum_required(VERSION 3.11)
project(GProject)
set(CMAKE_CXX_STANDARD 20)
add_executable(GProject main.cpp scr/)

set(SFML_STATIC_LIBRARIES TRUE)
find_package(SFML 2.5.1 REQUIRED graphics audio window system)
if(SFML_FOUND)
    include_directories(${SFML_INCLUDE_DIR})
    target_link_libraries(GProject sfml-graphics sfml-audio sfml-window sfml-system)
endif()
